Update webpage after the event has already passed
Change some texts, remove links to invitation mails and add link to wiki.

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <div class="container">
         <h2 class="text-center"><b>The Hackfest</b></h2>
         <hr class="small">
-        <p>The <strong>2014 Web Engines Hackfest</strong> will take place in A Coruña, Spain from Sunday, December 7th to Wednesday, December 10th. Igalia has been organizing and hosting the "<em>WebKitGTK+ Hackfest</em>" every year since 2009, but this year we want to have a more inclusive event.</p>
+        <p>The <strong>2014 Web Engines Hackfest</strong> took place in A Coruña, Spain from Sunday, December 7th to Wednesday, December 10th. Igalia has been organizing and hosting the "<em>WebKitGTK+ Hackfest</em>" every year since 2009, but this year we arranged a more inclusive event.</p>
 
         <div class="row inner">
           <div class="col-md-3">
@@ -88,10 +88,10 @@
           <div class="col-md-5 text-about">
             <ul>
               <li>
-                <p>This is a <strong>hacking oriented</strong> invitation-only event. If you want to attend you can <a href="mailto:hackfest@webengineshackfest.org">request an invitation</a>.</p>
+                <p>This is a <strong>hacking oriented</strong> invitation-only event.</p>
               </li>
               <li>
-                <p>The event will involve members from all parts of the Web Platform community, including those who work on Blink, WebKit, Gecko, and Servo.</p>
+                <p>The event involved members from all parts of the Web Platform community, including those who work on Blink, WebKit, Gecko, and Servo.</p>
               </li>
               <li>
                 <p>Check the list of <a href="#attendees">confirmed attendees</a> for more details.</p>
@@ -118,7 +118,7 @@
                 <p>Topics of interest include: WebKit ports, performance, graphics architecture, CSS (Grid Layout, Multi-column, Regions, etc.), multimedia, WebRTC, MathML, ES6 features (V8, JSC and SpiderMonkey), and Wayland support.</p>
               </li>
               <li>
-                <p> The event will have an <strong>unconference format</strong> and the first step will be
+                <p>The event has an <strong>unconference format</strong> and the first step is
                    the creation of small focused teams. Attendees should feel free to propose any topic which
                    interests them.</p>
               </li>
@@ -127,6 +127,28 @@
           <div class="col-md-4">
         <a target="_blank" href="http://www.flickr.com/photos/mariosp/6429995845/">
               <img class="photo-about img-rounded image-responsive" src="img/lectures/hackfest_2011_2.jpeg" alt="Another WebkitGTK+ Hackfest 2011 photo">
+            </a>
+          </div>
+        </div>
+
+        <div class="row inner">
+          <div class="col-md-3">
+            <span class="fa-stack fa-2x">
+              <i class="fa fa-home fa-stack-1x text-primary"></i>
+            </span><br>
+            <b>2014 Edition</b>
+          </div>
+          <div class="col-md-5 text-about">
+            <ul>
+              <li>
+                <p>This year we organized a few talks together with several breakout sessions about different web technologies.</p>
+                <p>You can find the slides and more information at the <strong><a href="https://github.com/Igalia/webengineshackfest/wiki">hackfest's wiki page</a></strong>.</p>
+              </li>
+            </ul>
+          </div>
+          <div class="col-md-4">
+        <a target="_blank" href="https://www.flickr.com/photos/aperezdc/15973626102/">
+              <img class="photo-about img-rounded image-responsive" src="img/lectures/web-engines-hackfest-2014.jpg" alt="Web Engines Hackfest 2015 photo">
             </a>
           </div>
         </div>
@@ -163,9 +185,6 @@
         <hr class="small">
 
         <div class="row inner">
-          <div class="text-center col-md-12" style="margin-bottom: 1em">
-            <p><em>We still have room for more people! If you want to attend <a href="mailto:hackfest@webengineshackfest.org">contact us</a>.</em></p>
-          </div>
           <div class="col-md-12">
             <p>This year we have people from several companies and organzations working on the Web Platform: <strong>Adobe</strong>, <strong>BrailleNet</strong>, <strong>Canon</strong>, <strong>Centricular</strong>, <strong>Collabora</strong>, <strong>GNOME</strong>, <strong>Igalia</strong>, <strong>Mozilla</strong>, <strong>Pierre and Marie Curie University</strong>, <strong>RedHat</strong>, <strong>Samsung</strong> and <strong>University of Szeged</strong>.</p>
           </div>
@@ -414,9 +433,6 @@
               <img id="logo-igalia" src="img/logos/logo-igalia.png" title="Igalia" alt="Igalia Logo">
             </a>
           </div>
-        </div>
-        <div class="row text-center">
-          <p><em>More sponsors are welcome! If you'd like to sponsor, <a href="mailto:hackfest@webengineshackfest.org">contact us</a>.</em></p>
         </div>
       </div>
     </section>
