Try to protect mail addresses from span

--- a/index.html
+++ b/index.html
@@ -399,17 +399,17 @@
         <ul>
             <li>To the event organizers
                 <ul>
-                  <li><a href="mailto:rego@igalia.com">Manuel Rego Casasnovas</a></li>
-                  <li><a href="mailto:alex@igalia.com">Alejandro Castro</a></li>
+                  <li><a href="mailto:rego ~at~ igalia #dot# com">Manuel Rego Casasnovas</a></li>
+                  <li><a href="mailto:alex ~at~ igalia #dot# com">Alejandro Castro</a></li>
                 </ul>
             </li>
-           <li>To the Igalia anti-harassment commission at harassment@igalia.com or to any of the individual members:
+           <li>To the <a href="mailto:harassment ~at~ igalia #dot# com">Igalia anti-harassment commission</a> or to any of the individual members:
               <ul>
-               <li><a href="mailto:apuentes@igalia.com">Antía Puentes</a></li>
-               <li><a href="mailto:eloureiro@igalia.com">Eva Loureiro Blanco</a></li>
-               <li><a href="mailto:jdiggs@igalia.com">Joanmarie Diggs</a></li>
-               <li><a href="mailto:wingo@igalia.com">Andy Wingo</a></li>
-               <li><a href="mailto:jmoran@igalia.com">Javier Morán Rúa</a></li>
+               <li><a href="mailto:apuentes ~at~ igalia #dot# com">Antía Puentes</a></li>
+               <li><a href="mailto:eloureiro ~at~ igalia #dot# com">Eva Loureiro Blanco</a></li>
+               <li><a href="mailto:jdiggs ~at~ igalia #dot# com">Joanmarie Diggs</a></li>
+               <li><a href="mailto:wingo ~at~ igalia #dot# com">Andy Wingo</a></li>
+               <li><a href="mailto:jmoran ~at~ igalia #dot# com">Javier Morán Rúa</a></li>
               </ul>
           </li>
         </ul>
