--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">7-9 December | A Coruña</div>
+                <div class="intro-lead-in">7-9 December | A Coruña, Spain</div>
                 <div class="intro-heading">Web Engines Hackfest 2015</div>
                 <a href="#hackfest" class="page-scroll btn btn-xl">More info</a>
             </div>
