--- a/index.html
+++ b/index.html
@@ -156,10 +156,10 @@
     <section id="venue" class="bg-light-gray">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center">
+                <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h2 class="section-heading">Venue</h2>
                     <p>
-                        <iframe width="600" height="400" src="http://www.openstreetmap.org/export/embed.html?bbox=-8.41326355934143%2C43.34453079897872%2C-8.405592441558838%2C43.34787795067693&amp;layer=mapnik&amp;marker=43.346204397898134%2C-8.409428000450134" style="border: 1px solid black"></iframe>
+                        <iframe width="100%" height="400px" src="http://www.openstreetmap.org/export/embed.html?bbox=-8.41326355934143%2C43.34453079897872%2C-8.405592441558838%2C43.34787795067693&amp;layer=mapnik&amp;marker=43.346204397898134%2C-8.409428000450134" style="border: 1px solid black"></iframe>
                         <br>
                         <small><a href="http://www.openstreetmap.org/?mlat=43.34620&amp;mlon=-8.40943#map=18/43.34620/-8.40943&amp;layers=N">OpenStreetMap Page</a></small>
                     </p>
