Fix missing </span>

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                     <br>
                     Photos by <a href="https://www.flickr.com/photos/aperezdc/15973626102/">Adrián</a> <a href="https://www.flickr.com/photos/aperezdc/15797464819/">Pérez</a> <a href="https://www.flickr.com/photos/aperezdc/15789146369/">de Castro</a> and <a href="https://www.flickr.com/photos/mariosp/6430004907/">Mario Sánchez Prada</a> with their own Creative Commons licenses.
                     <br>
-                    Website design is based on the <a href="http://startbootstrap.com/template-overviews/agency/">Agency theme by Start Bootstrap</a> with <a href="https://www.apache.org/licenses/LICENSE-2.0.html">Apache 2.0</a> license.
+                    Website design is based on the <a href="http://startbootstrap.com/template-overviews/agency/">Agency theme by Start Bootstrap</a> with <a href="https://www.apache.org/licenses/LICENSE-2.0.html">Apache 2.0</a> license.</span>
                 </div>
             </div>
         </div>
