Add a few more keywords

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Hacking oriented invitation-only event. Involving members from all parts of the Open Web Platform community, including those who work on Blink, WebKit, Gecko, and Servo.">
-    <meta name="keywords" content="web hackfest, web engines hackfest, web engines, hackfest, conference, web conference, web engines conference, open web platform, open web hackfest, chromium hackfest, blink Hackfest, safari hackfest, webkit hackfest, firefox hackfest, gecko hackfest, servo hackfest, chromium, blink, safari, webkit, firefox, gecko, servo">
+    <meta name="keywords" content="web hackfest, web engines hackfest, web engines, web browsers hackfest, web browsers, browsers hackfest, hackfest, conference, web conference, web engines conference, open web platform, open web hackfest, chromium hackfest, blink Hackfest, safari hackfest, webkit hackfest, firefox hackfest, gecko hackfest, servo hackfest, chromium, blink, safari, webkit, firefox, gecko, servo">
     <meta name="author" content="Igalia">
 
     <title>2015 Web Engines Hackfest</title>
