Add Collabora as sponsor

--- a/index.html
+++ b/index.html
@@ -235,12 +235,13 @@
                     <h3 class="section-subheading text-muted">More sponsors are welcome! If you'd like to contribute as sponsor, please <a href="mailto:hackfest@webengineshackfest.org">contact us</a>.</h3>
                 </div>
             </div>
-            <div class="row text-center">
-                <div class="col-md-4 col-md-offset-4">
-                    <a href="http://www.igalia.com">
-                        <img src="img/logos/logo-igalia.png" title="Igalia" alt="Igalia Logo">
-                    </a>
-                </div>
+            <div class="row text-center sponsors">
+                <a href="https://www.collabora.com">
+                    <img src="img/logos/logo-collabora.png" title="Collabora" alt="Collabora Logo">
+                </a>
+                <a href="http://www.igalia.com">
+                    <img src="img/logos/logo-igalia.png" title="Igalia" alt="Igalia Logo">
+                </a>
             </div>
         </div>
     </section>
