--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h2 class="section-heading">Venue</h2>
                     <p>
-                        <iframe width="100%" height="400px" src="http://www.openstreetmap.org/export/embed.html?bbox=-8.41326355934143%2C43.34453079897872%2C-8.405592441558838%2C43.34787795067693&amp;layer=mapnik&amp;marker=43.346204397898134%2C-8.409428000450134" style="border: 1px solid black"></iframe>
+                        <iframe src="http://www.openstreetmap.org/export/embed.html?bbox=-8.41326355934143%2C43.34453079897872%2C-8.405592441558838%2C43.34787795067693&amp;layer=mapnik&amp;marker=43.346204397898134%2C-8.409428000450134" style="width: 100%; height: 400px; border: 1px solid black"></iframe>
                         <br>
                         <small><a href="http://www.openstreetmap.org/?mlat=43.34620&amp;mlon=-8.40943#map=18/43.34620/-8.40943&amp;layers=N">OpenStreetMap Page</a></small>
                     </p>
