Add atendees list

--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
                                 <div class="timeline-body">
                                     <p class="text-muted">This is a <strong>hacking oriented</strong> invitation-only event. If you want to attend you can <a href="mailto:hackfest@webengineshackfest.org">request an invitation</a>.</p>
                                     <p class="text-muted">The event involves members from all parts of the Web Platform community, including those who work on Blink, WebKit, Gecko, and Servo.</p>
+                                    <p class="text-muted">Check the list of <a href="#attendees">confirmed attendees</a> for more details.</p>
                                 </div>
                             </div>
                         </li>
@@ -150,6 +151,52 @@
                 </div>
             </div>
         </div>
+    </section>
+
+    <!-- Attendees Section -->
+    <section id="attendees">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Attendees</h2>
+                    <h3 class="section-subheading text-muted">This year we have people from several companies and organzations working on the Web Platform: <strong>BrailleNet</strong>, <strong>Collabora</strong>, <strong>Google</strong>, <strong>Huawei</strong>, <strong>Igalia</strong>, and <strong>Naver</strong>.</h3>
+                </div>
+            </div>
+            <div class="row">
+                <ul>
+                    <div class="col-sm-4">
+                        <li>Alberto Garcia <a href="http://twitter.com/bertogg" title="@bertogg"><i class="fa fa-twitter"></i></a></li>
+                        <li>Alejandro G. Castro <a href="http://twitter.com/alexgcastro" title="@alexgcastro"><i class="fa fa-twitter"></i></a></li>
+                        <li>Andrey Fedorov</li>
+                        <li>Carlos A. Lopez Perez <a href="http://twitter.com/cl0p3z" title="@cl0p3z"><i class="fa fa-twitter"></i></a></li>
+                        <li>Carlos Garcia Campos</li>
+                        <li>ChangSeok Oh <a href="http://twitter.com/shivamidow" title="@shivamidow"><i class="fa fa-twitter"></i></a></li>
+                        <li>Claudio Saavedra <a href="http://twitter.com/csaavedra" title="@csaavedra"><i class="fa fa-twitter"></i></a></li>
+                        <li>Dominik Rottsches <a href="http://twitter.com/abrax5"><i class="fa fa-twitter"></i></a></li>
+                        <li>Enrique Ocaña Gonzalez <a href="http://twitter.com/eocanha" title="@eocanha"><i class="fa fa-twitter"></i></a></li>
+                    </div>
+                    <div class="col-sm-4">
+                        <li>Frederic Wang</li>
+                        <li>Gustavo Noronha <a href="http://twitter.com/gustavokov" title="@gustavokov"><i class="fa fa-twitter"></i></a></li>
+                        <li>Gwang Yoon Hwang <a href="http://twitter.com/ryumiel" title="@ryumiel"><i class="fa fa-twitter"></i></a></li>
+                        <li>Gyuyoung Kim <a href="http://twitter.com/gyuyoung_kim" title="@gyuyoung_kim"><i class="fa fa-twitter"></i></a></li>
+                        <li>Hyowon Kim</li>
+                        <li>Javier Fernandez <a href="http://twitter.com/lajava77" title="@lajava77"><i class="fa fa-twitter"></i></a></li>
+                        <li>Joanmarie Diggs <a href="http://twitter.com/Joanmarie" title="@Joanmarie"><i class="fa fa-twitter"></i></a></li>
+                        <li>Joao Oliveira <a href="http://twitter.com/jxs01" title="@jxs01"><i class="fa fa-twitter"></i></a></li>
+                    </div>
+                    <div class="col-sm-4">
+                        <li>Manuel Rego <a href="http://twitter.com/regocas" title="@regocas"><i class="fa fa-twitter"></i></a></li>
+                        <li>Martin Robinson <a href="http://twitter.com/abandonedwig" title="@abandonedwig"><i class="fa fa-twitter"></i></a></li>
+                        <li>Michael Catanzaro</li>
+                        <li>Philippe Normand <a href="http://twitter.com/pnormand" title="@pnormand"><i class="fa fa-twitter"></i></a></li>
+                        <li>Ryuan Choi <a href="http://twitter.com/bunhere" title="@bunhere"><i class="fa fa-twitter"></i></a></li>
+                        <li>Sergio Villar Senin <a href="http://twitter.com/svillarsenin" title="@svillarsenin"><i class="fa fa-twitter"></i></a></li>
+                        <li>Xabier Rodriguez Calvar <a href="http://twitter.com/calvaris" title="@calvaris"><i class="fa fa-twitter"></i></a></li>
+                        <li>Zan Dobersek <a href="http://twitter.com/falconsigh" title="@falconsigh"><i class="fa fa-twitter"></i></a></li>
+                    </div>
+                </ul>
+            </div>
     </section>
 
     <!-- Venue Section -->
