Add comment about room for more people

--- a/index.html
+++ b/index.html
@@ -197,6 +197,11 @@
                     </div>
                 </ul>
             </div>
+            <div class="row" style="margin-top: 2em;">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <p class="large text-muted">We still have room for more people! If you want to attend <a href="mailto:hackfest@webengineshackfest.org">contact us</a>.</p>
+                </div>
+            </div>
     </section>
 
     <!-- Venue Section -->
