--- a/index.html
+++ b/index.html
@@ -165,25 +165,25 @@
             <div class="row">
                 <ul>
                     <div class="col-sm-4">
-                        <li>Alberto Garcia <a href="http://twitter.com/bertogg" title="@bertogg"><i class="fa fa-twitter"></i></a></li>
+                        <li>Alberto García <a href="http://twitter.com/bertogg" title="@bertogg"><i class="fa fa-twitter"></i></a></li>
                         <li>Alejandro G. Castro <a href="http://twitter.com/alexgcastro" title="@alexgcastro"><i class="fa fa-twitter"></i></a></li>
                         <li>Andrey Fedorov</li>
-                        <li>Carlos A. Lopez Perez <a href="http://twitter.com/cl0p3z" title="@cl0p3z"><i class="fa fa-twitter"></i></a></li>
-                        <li>Carlos Garcia Campos</li>
+                        <li>Carlos A. López Pérez <a href="http://twitter.com/cl0p3z" title="@cl0p3z"><i class="fa fa-twitter"></i></a></li>
+                        <li>Carlos García Campos</li>
                         <li>ChangSeok Oh <a href="http://twitter.com/shivamidow" title="@shivamidow"><i class="fa fa-twitter"></i></a></li>
                         <li>Claudio Saavedra <a href="http://twitter.com/csaavedra" title="@csaavedra"><i class="fa fa-twitter"></i></a></li>
-                        <li>Dominik Rottsches <a href="http://twitter.com/abrax5"><i class="fa fa-twitter"></i></a></li>
-                        <li>Enrique Ocaña Gonzalez <a href="http://twitter.com/eocanha" title="@eocanha"><i class="fa fa-twitter"></i></a></li>
+                        <li>Dominik Röttsches <a href="http://twitter.com/abrax5"><i class="fa fa-twitter"></i></a></li>
+                        <li>Enrique Ocaña González <a href="http://twitter.com/eocanha" title="@eocanha"><i class="fa fa-twitter"></i></a></li>
                     </div>
                     <div class="col-sm-4">
-                        <li>Frederic Wang</li>
+                        <li>Frédéric Wang</li>
                         <li>Gustavo Noronha <a href="http://twitter.com/gustavokov" title="@gustavokov"><i class="fa fa-twitter"></i></a></li>
                         <li>Gwang Yoon Hwang <a href="http://twitter.com/ryumiel" title="@ryumiel"><i class="fa fa-twitter"></i></a></li>
                         <li>Gyuyoung Kim <a href="http://twitter.com/gyuyoung_kim" title="@gyuyoung_kim"><i class="fa fa-twitter"></i></a></li>
                         <li>Hyowon Kim</li>
-                        <li>Javier Fernandez <a href="http://twitter.com/lajava77" title="@lajava77"><i class="fa fa-twitter"></i></a></li>
+                        <li>Javier Fernández <a href="http://twitter.com/lajava77" title="@lajava77"><i class="fa fa-twitter"></i></a></li>
                         <li>Joanmarie Diggs <a href="http://twitter.com/Joanmarie" title="@Joanmarie"><i class="fa fa-twitter"></i></a></li>
-                        <li>Joao Oliveira <a href="http://twitter.com/jxs01" title="@jxs01"><i class="fa fa-twitter"></i></a></li>
+                        <li>João Oliveira <a href="http://twitter.com/jxs01" title="@jxs01"><i class="fa fa-twitter"></i></a></li>
                     </div>
                     <div class="col-sm-4">
                         <li>Manuel Rego <a href="http://twitter.com/regocas" title="@regocas"><i class="fa fa-twitter"></i></a></li>
@@ -191,9 +191,9 @@
                         <li>Michael Catanzaro</li>
                         <li>Philippe Normand <a href="http://twitter.com/pnormand" title="@pnormand"><i class="fa fa-twitter"></i></a></li>
                         <li>Ryuan Choi <a href="http://twitter.com/bunhere" title="@bunhere"><i class="fa fa-twitter"></i></a></li>
-                        <li>Sergio Villar Senin <a href="http://twitter.com/svillarsenin" title="@svillarsenin"><i class="fa fa-twitter"></i></a></li>
-                        <li>Xabier Rodriguez Calvar <a href="http://twitter.com/calvaris" title="@calvaris"><i class="fa fa-twitter"></i></a></li>
-                        <li>Zan Dobersek <a href="http://twitter.com/falconsigh" title="@falconsigh"><i class="fa fa-twitter"></i></a></li>
+                        <li>Sergio Villar Senín <a href="http://twitter.com/svillarsenin" title="@svillarsenin"><i class="fa fa-twitter"></i></a></li>
+                        <li>Xabier Rodríguez Calvar <a href="http://twitter.com/calvaris" title="@calvaris"><i class="fa fa-twitter"></i></a></li>
+                        <li>Žan Dobersek <a href="http://twitter.com/falconsigh" title="@falconsigh"><i class="fa fa-twitter"></i></a></li>
                     </div>
                 </ul>
             </div>
