Add Tomas Popela

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Attendees</h2>
-                    <h3 class="section-subheading text-muted">This year we have people from several companies and organzations working on the Web Platform: <strong>BrailleNet</strong>, <strong>Collabora</strong>, <strong>Google</strong>, <strong>Huawei</strong>, <strong>Igalia</strong>, and <strong>Naver</strong>.</h3>
+                    <h3 class="section-subheading text-muted">This year we have people from several companies and organzations working on the Web Platform: <strong>BrailleNet</strong>, <strong>Collabora</strong>, <strong>Google</strong>, <strong>Huawei</strong>, <strong>Igalia</strong>, <strong>Naver</strong>, and <strong>Red Hat</strong>.</h3>
                 </div>
             </div>
             <div class="row">
@@ -184,14 +184,15 @@
                         <li>Javier Fernández <a href="http://twitter.com/lajava77" title="@lajava77"><i class="fa fa-twitter"></i></a></li>
                         <li>Joanmarie Diggs <a href="http://twitter.com/Joanmarie" title="@Joanmarie"><i class="fa fa-twitter"></i></a></li>
                         <li>João Oliveira <a href="http://twitter.com/jxs01" title="@jxs01"><i class="fa fa-twitter"></i></a></li>
+                        <li>Manuel Rego <a href="http://twitter.com/regocas" title="@regocas"><i class="fa fa-twitter"></i></a></li>
                     </div>
                     <div class="col-sm-4">
-                        <li>Manuel Rego <a href="http://twitter.com/regocas" title="@regocas"><i class="fa fa-twitter"></i></a></li>
                         <li>Martin Robinson <a href="http://twitter.com/abandonedwig" title="@abandonedwig"><i class="fa fa-twitter"></i></a></li>
                         <li>Michael Catanzaro</li>
                         <li>Philippe Normand <a href="http://twitter.com/pnormand" title="@pnormand"><i class="fa fa-twitter"></i></a></li>
                         <li>Ryuan Choi <a href="http://twitter.com/bunhere" title="@bunhere"><i class="fa fa-twitter"></i></a></li>
                         <li>Sergio Villar Senín <a href="http://twitter.com/svillarsenin" title="@svillarsenin"><i class="fa fa-twitter"></i></a></li>
+                        <li>Tomas Popela</li>
                         <li>Xabier Rodríguez Calvar <a href="http://twitter.com/calvaris" title="@calvaris"><i class="fa fa-twitter"></i></a></li>
                         <li>Žan Dobersek <a href="http://twitter.com/falconsigh" title="@falconsigh"><i class="fa fa-twitter"></i></a></li>
                     </div>
