Add Youenn Fablet

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Attendees</h2>
-                    <h3 class="section-subheading text-muted">This year we have people from several companies and organzations working on the Web Platform: <strong>BrailleNet</strong>, <strong>Collabora</strong>, <strong>Google</strong>, <strong>Huawei</strong>, <strong>Igalia</strong>, <strong>Naver</strong>, and <strong>Red Hat</strong>.</h3>
+                    <h3 class="section-subheading text-muted">This year we have people from several companies and organzations working on the Web Platform: <strong>BrailleNet</strong>, <strong>Canon</strong>, <strong>Collabora</strong>, <strong>Google</strong>, <strong>Huawei</strong>, <strong>Igalia</strong>, <strong>Naver</strong>, and <strong>Red Hat</strong>.</h3>
                 </div>
             </div>
             <div class="row">
@@ -194,6 +194,7 @@
                         <li>Sergio Villar Senín <a href="http://twitter.com/svillarsenin" title="@svillarsenin"><i class="fa fa-twitter"></i></a></li>
                         <li>Tomas Popela</li>
                         <li>Xabier Rodríguez Calvar <a href="http://twitter.com/calvaris" title="@calvaris"><i class="fa fa-twitter"></i></a></li>
+                        <li>Youenn Fablet</li>
                         <li>Žan Dobersek <a href="http://twitter.com/falconsigh" title="@falconsigh"><i class="fa fa-twitter"></i></a></li>
                     </div>
                 </ul>
