Add new attendees

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Attendees</h2>
-                    <h3 class="section-subheading text-muted">This year we have people from several companies and organzations working on the Web Platform: <strong>BrailleNet</strong>, <strong>Canon</strong>, <strong>Collabora</strong>, <strong>Google</strong>, <strong>Huawei</strong>, <strong>Igalia</strong>, <strong>Naver</strong>, and <strong>Red Hat</strong>.</h3>
+                    <h3 class="section-subheading text-muted">This year we have people from several companies and organzations working on the Web Platform: <strong>BrailleNet</strong>, <strong>Canon</strong>, <strong>Collabora</strong>, <strong>Endless</strong>, <strong>Google</strong>, <strong>Huawei</strong>, <strong>Igalia</strong>, <strong>Naver</strong>, and <strong>Red Hat</strong>.</h3>
                 </div>
             </div>
             <div class="row">
@@ -168,14 +168,16 @@
                         <li>Alberto García <a href="http://twitter.com/bertogg" title="@bertogg"><i class="fa fa-twitter"></i></a></li>
                         <li>Alejandro G. Castro <a href="http://twitter.com/alexgcastro" title="@alexgcastro"><i class="fa fa-twitter"></i></a></li>
                         <li>Andrey Fedorov</li>
+                        <li>Arnaud Bonatti</li>
                         <li>Carlos A. López Pérez <a href="http://twitter.com/cl0p3z" title="@cl0p3z"><i class="fa fa-twitter"></i></a></li>
                         <li>Carlos García Campos</li>
                         <li>ChangSeok Oh <a href="http://twitter.com/shivamidow" title="@shivamidow"><i class="fa fa-twitter"></i></a></li>
                         <li>Claudio Saavedra <a href="http://twitter.com/csaavedra" title="@csaavedra"><i class="fa fa-twitter"></i></a></li>
                         <li>Dominik Röttsches <a href="http://twitter.com/abrax5"><i class="fa fa-twitter"></i></a></li>
-                        <li>Enrique Ocaña González <a href="http://twitter.com/eocanha" title="@eocanha"><i class="fa fa-twitter"></i></a></li>
+                        <li>Emanuele Aina <a href="https://twitter.com/emanueleaina" title="@emanueleaina"><i class="fa fa-twitter"></i></a></li>
                     </div>
                     <div class="col-sm-4">
+                        <li>Enrique Ocaña González <a href="http://twitter.com/eocanha" title="@eocanha"><i class="fa fa-twitter"></i></a></li>
                         <li>Frédéric Wang</li>
                         <li>Gustavo Noronha <a href="http://twitter.com/gustavokov" title="@gustavokov"><i class="fa fa-twitter"></i></a></li>
                         <li>Gwang Yoon Hwang <a href="http://twitter.com/ryumiel" title="@ryumiel"><i class="fa fa-twitter"></i></a></li>
@@ -187,6 +189,7 @@
                         <li>Manuel Rego <a href="http://twitter.com/regocas" title="@regocas"><i class="fa fa-twitter"></i></a></li>
                     </div>
                     <div class="col-sm-4">
+                        <li>Mario Sánchez Prada <a href="https://twitter.com/mariospr" title="@mariospr"><i class="fa fa-twitter"></i></a></li>
                         <li>Martin Robinson <a href="http://twitter.com/abandonedwig" title="@abandonedwig"><i class="fa fa-twitter"></i></a></li>
                         <li>Michael Catanzaro</li>
                         <li>Philippe Normand <a href="http://twitter.com/pnormand" title="@pnormand"><i class="fa fa-twitter"></i></a></li>
