Add link to wiki

--- a/index.html
+++ b/index.html
@@ -131,6 +131,19 @@
                         </li>
                         <li>
                             <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/web-engines-hackfest-2014-4.jpg" alt="Web Engines Hackfest 2014 - Main room">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4 class="subheading">2015 Edition</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Visit the <a href="https://github.com/Igalia/webengineshackfest/wiki">hackfest wiki page</a> with scheduling, breakout sessions and all the information related to the event.</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
                                 <img class="img-circle img-responsive" src="img/web-engines-hackfest-2014-3.jpg" alt="Web Engines Hackfest 2014 - Breakout session">
                             </div>
                             <div class="timeline-panel">
@@ -406,7 +419,7 @@
                 <div class="col-md-12">
                     <span class="copyright">Except where otherwise <strong>noted</strong> this site is licensed under <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution ShareAlike 4.0 Internacional license</a>.
                     <br>
-                    Photos by <a href="https://www.flickr.com/photos/aperezdc/15973626102/">Adrián</a> <a href="https://www.flickr.com/photos/aperezdc/15797464819/">Pérez</a> <a href="https://www.flickr.com/photos/aperezdc/15789146369/">de Castro</a> and <a href="https://www.flickr.com/photos/mariosp/6430004907/">Mario Sánchez Prada</a> with their own Creative Commons licenses.
+                    Photos by <a href="https://www.flickr.com/photos/aperezdc/15973626102/">Adrián</a> <a href="https://www.flickr.com/photos/aperezdc/15797464819/">Pérez</a> <a href="https://www.flickr.com/photos/aperezdc/15789146369/">de</a> <a href="https://www.flickr.com/photos/aperezdc/15972643911/">Castro</a> and <a href="https://www.flickr.com/photos/mariosp/6430004907/">Mario Sánchez Prada</a> with their own Creative Commons licenses.
                     <br>
                     Website design is based on the <a href="http://startbootstrap.com/template-overviews/agency/">Agency theme by Start Bootstrap</a> with <a href="https://www.apache.org/licenses/LICENSE-2.0.html">Apache 2.0</a> license.</span>
                 </div>
