--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                         <li>Gustavo Noronha <a href="http://twitter.com/gustavokov" title="@gustavokov"><i class="fa fa-twitter"></i></a></li>
                         <li>Gwang Yoon Hwang <a href="http://twitter.com/ryumiel" title="@ryumiel"><i class="fa fa-twitter"></i></a></li>
                         <li>Gyuyoung Kim <a href="http://twitter.com/gyuyoung_kim" title="@gyuyoung_kim"><i class="fa fa-twitter"></i></a></li>
-                        <li>Hyowon Kim</li>
+                        <li>Hyo Kim</li>
                         <li>Javier Fernández <a href="http://twitter.com/lajava77" title="@lajava77"><i class="fa fa-twitter"></i></a></li>
                         <li>Joanmarie Diggs <a href="http://twitter.com/Joanmarie" title="@Joanmarie"><i class="fa fa-twitter"></i></a></li>
                         <li>João Oliveira <a href="http://twitter.com/jxs01" title="@jxs01"><i class="fa fa-twitter"></i></a></li>
