Add Galicia to addresses

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">7-9 December | A Coruña, Spain</div>
+                <div class="intro-lead-in">7-9 December | A Coruña, Galicia, Spain</div>
                 <div class="intro-heading">Web Engines Hackfest 2015</div>
             </div>
         </div>
@@ -94,7 +94,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">The Hackfest</h2>
-                    <h3 class="section-subheading text-muted">The <strong>2015 Web Engines Hackfest</strong> will take place in A Coruña, Spain from Monday, December 7th to Wednesday, December 9th. Igalia has been organizing and hosting this event every year since 2009.</h3>
+                    <h3 class="section-subheading text-muted">The <strong>2015 Web Engines Hackfest</strong> will take place in A Coruña, Galicia, Spain from Monday, December 7th to Wednesday, December 9th. Igalia has been organizing and hosting this event every year since 2009.</h3>
                 </div>
             </div>
             <div class="row">
@@ -233,7 +233,7 @@
                         <br>
                         <small><a href="http://www.openstreetmap.org/?mlat=43.34620&amp;mlon=-8.40943#map=18/43.34620/-8.40943&amp;layers=N">OpenStreetMap Page</a></small>
                     </p>
-                    <h3 class="section-subheading text-muted"><strong>Igalia Headquarters</strong><br>Bugallal Marchesi 22, 1º<br>15008, A Coruña<br>Spain</h3>
+                    <h3 class="section-subheading text-muted"><strong>Igalia Headquarters</strong><br>Bugallal Marchesi 22, 1º<br>15008, A Coruña<br>Galicia (Spain)</h3>
                 </div>
             </div>
             <div class="row">
