Remove messages to request invitation or sponsor hackfest

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                                     <h4 class="subheading">Who is attending?</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">This is a <strong>hacking oriented</strong> invitation-only event. If you want to attend you can <a href="mailto:hackfest@webengineshackfest.org">request an invitation</a>.</p>
+                                    <p class="text-muted">This is a <strong>hacking oriented</strong> invitation-only event.</p>
                                     <p class="text-muted">The event involves members from all parts of the Web Platform community, including those who work on Blink, WebKit, Gecko, and Servo.</p>
                                     <p class="text-muted">Check the list of <a href="#attendees">confirmed attendees</a> for more details.</p>
                                 </div>
@@ -215,11 +215,6 @@
                     </div>
                 </ul>
             </div>
-            <div class="row" style="margin-top: 2em;">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">We still have room for more people! If you want to attend <a href="mailto:hackfest@webengineshackfest.org">contact us</a>.</p>
-                </div>
-            </div>
     </section>
 
     <!-- Venue Section -->
@@ -302,7 +297,6 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Sponsors</h2>
-                    <h3 class="section-subheading text-muted">More sponsors are welcome! If you'd like to contribute as sponsor, please <a href="mailto:hackfest@webengineshackfest.org">contact us</a>.</h3>
                 </div>
             </div>
             <div class="row text-center sponsors">
