Adding new attendee: Eric Schrijver

--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
                         <li>Enrique Ocaña González <a href="http://twitter.com/eocanha" title="@eocanha"><i class="fa fa-twitter"></i></a></li>
                     </div>
                     <div class="col-sm-4">
+                        <li>Eric Schrijver <a href="http://twitter.com/ericschrijver" title="@ericschrijver"><i class="fa fa-twitter"></i></a></li>
                         <li>Frédéric Wang</li>
                         <li>Gustavo Noronha <a href="http://twitter.com/gustavokov" title="@gustavokov"><i class="fa fa-twitter"></i></a></li>
                         <li>Gwang Yoon Hwang <a href="http://twitter.com/ryumiel" title="@ryumiel"><i class="fa fa-twitter"></i></a></li>
