Publish Gustavo's talk

--- a/index.html
+++ b/index.html
@@ -190,6 +190,20 @@
                         <p class="text-muted">by Michael Catanzaro</p>
                     </div>
                 </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#talkModalGustavo" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/talks/going-upstream-the-future-or-lack-thereof-of-webkit-clutter-by-gustavo-noronha.jpg" class="img-responsive" alt="Going upstream: the future (or lack thereof) of WebKit Clutter">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4><a href="#talkModalGustavo" class="portfolio-link" data-toggle="modal">Going upstream: the future (or lack thereof) of WebKit Clutter</a></h4>
+                        <p class="text-muted">by Gustavo Noronha <a href="http://twitter.com/gustavokov" title="@gustavokov"><i class="fa fa-twitter"></i></a></p>
+                    </div>
+                </div>
 			</div>
         </div>
     </section>
@@ -474,8 +488,39 @@
                                 <li>Slides: <a href="http://www.webengineshackfest.org/slides/https-achievements-and-challenges-by-michael-catanzaro.pdf">PDF</a></li>
                             </ul>
                             <ul class="list-inline">
-                                <li>Date: Monday 7h December 2015</li>
+                                <li>Date: Monday 7th December 2015</li>
                                 <li>Time: 15:00</li>
+                            </ul>
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Talk</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Gustavo talk -->
+    <div class="portfolio-modal modal fade" id="talkModalGustavo" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+							<h2>Going upstream: the future (or lack thereof) of WebKit Clutter</h2>
+							<p class="item-intro text-muted">by Gustavo Noronha <a href="http://twitter.com/gustavokov" title="@gustavokov"><i class="fa fa-twitter"></i></a></p>
+                            <iframe width="640" height="360" src="https://www.youtube.com/embed/zn-FWJF8A5Y?list=PL4sEzdAGvRgAMfxwUK2sAQcq5EdmDV3eW" frameborder="0" allowfullscreen></iframe>
+                            <ul class="list-inline">
+                                <li>Video: <a href="https://youtu.be/zn-FWJF8A5Y?list=PL4sEzdAGvRgAMfxwUK2sAQcq5EdmDV3eW">YouTube</a></li>
+                                <li>Slides: <a href="http://www.webengineshackfest.org/slides/going-upstream-the-future-or-lack-thereof-of-webkit-clutter-by-gustavo-noronha.pdf">PDF</a></li>
+                            </ul>
+                            <ul class="list-inline">
+                                <li>Date: Tuesday 8th December 2015</li>
+                                <li>Time: 10:00</li>
                             </ul>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Talk</button>
                         </div>
