--- a/index.html
+++ b/index.html
@@ -197,11 +197,25 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/talks/going-upstream-the-future-or-lack-thereof-of-webkit-clutter-by-gustavo-noronha.jpg" class="img-responsive" alt="Going upstream: the future (or lack thereof) of WebKit Clutter">
+                        <img src="img/talks/going-upstream-the-future-or-lack-thereof-of-webkit-clutter-by-gustavo-noronha.jpg" class="img-responsive" alt="Gustavo Noronha talking about WebKit Clutter">
                     </a>
                     <div class="portfolio-caption">
                         <h4><a href="#talkModalGustavo" class="portfolio-link" data-toggle="modal">Going upstream: the future (or lack thereof) of WebKit Clutter</a></h4>
                         <p class="text-muted">by Gustavo Noronha <a href="http://twitter.com/gustavokov" title="@gustavokov"><i class="fa fa-twitter"></i></a></p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#talkModalDominik" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/talks/recent-blink-improvements-in-text-and-layout-by-dominik-rottsches.jpg" class="img-responsive" alt="Dominik Röttsches talking about Text Layout">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4><a href="#talkModalDominik" class="portfolio-link" data-toggle="modal">Recent Blink improvements in Text &amp; Layout</a></h4>
+                        <p class="text-muted">by Dominik Röttsches <a href="http://twitter.com/abrax5"><i class="fa fa-twitter"></i></a></p>
                     </div>
                 </div>
 			</div>
@@ -521,6 +535,37 @@
                             <ul class="list-inline">
                                 <li>Date: Tuesday 8th December 2015</li>
                                 <li>Time: 10:00</li>
+                            </ul>
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Talk</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Dominik talk -->
+    <div class="portfolio-modal modal fade" id="talkModalDominik" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+							<h2>Recent Blink improvements in Text &amp; Layout</h2>
+							<p class="item-intro text-muted">by Dominik Röttsches <a href="http://twitter.com/abrax5"><i class="fa fa-twitter"></i></a></p>
+                            <iframe width="640" height="360" src="https://www.youtube.com/embed/Plhnr7mPhxw?list=PL4sEzdAGvRgAMfxwUK2sAQcq5EdmDV3eW" frameborder="0" allowfullscreen></iframe>
+                            <ul class="list-inline">
+                                <li>Video: <a href="https://youtu.be/Plhnr7mPhxw?list=PL4sEzdAGvRgAMfxwUK2sAQcq5EdmDV3eW">YouTube</a></li>
+                                <li>Slides: <a href="http://www.webengineshackfest.org/slides/recent-blink-improvements-in-text-and-layout-by-dominik-rottsches.pdf">PDF</a></li>
+                            </ul>
+                            <ul class="list-inline">
+                                <li>Date: Tuesday 8th December 2015</li>
+                                <li>Time: 15:00</li>
                             </ul>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Talk</button>
                         </div>
